--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline for Category and Product Services
+name: CI/CD Pipeline for Microservices
 
 on:
   push:
@@ -6,6 +6,7 @@ on:
       - Feature_CategoryDomain_GetAllCategories
 
 jobs:
+  # 🛠 Build and Push create-category
   build-and-push-create:
     runs-on: ubuntu-latest
     steps:
@@ -26,6 +27,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/create-category:latest
 
+  # 🛠 Build and Push get-all-categories
   build-and-push-getall:
     runs-on: ubuntu-latest
     steps:
@@ -46,6 +48,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/get-all-categories:latest
 
+  # 🛠 Build and Push get-byid-category
   build-and-push-getbyid:
     runs-on: ubuntu-latest
     steps:
@@ -66,9 +69,9 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/get-byid-category:latest
 
+  # 🛠 Build and Push graphql-gateway
   build-and-push-graphql:
     runs-on: ubuntu-latest
-    needs: build-and-push-getbyid
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -79,17 +82,17 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Build and push GraphQL Gateway
+      - name: Build and push graphql-gateway
         uses: docker/build-push-action@v4
         with:
-          context: ./BackEnd/Domains/GraphQL-Gateway
-          file: ./BackEnd/Domains/GraphQL-Gateway/Dockerfile
+          context: ./BackEnd/GraphQL-Gateway
+          file: ./BackEnd/GraphQL-Gateway/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/graphql-gateway:latest
 
-  build-and-push-create-product:
+  # 🛠 Build and Push create-product
+  build-and-push-createproduct:
     runs-on: ubuntu-latest
-    needs: build-and-push-graphql
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -103,11 +106,12 @@ jobs:
       - name: Build and push create-product
         uses: docker/build-push-action@v4
         with:
-          context: ./BackEnd/Domains/Products/CreateProduct
-          file: ./BackEnd/Domains/Products/CreateProduct/Dockerfile
+          context: ./BackEnd/Products/CreateProduct
+          file: ./BackEnd/Products/CreateProduct/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/create-product:latest
 
+  # 🚀 Deploy create-category
   deploy-create:
     needs: build-and-push-create
     runs-on: ubuntu-latest
@@ -126,11 +130,50 @@ jobs:
               -e MONGO_URI="${{ secrets.MONGO_URI }}" \
               ${{ secrets.DOCKERHUB_USERNAME }}/create-category:latest
 
+  # 🚀 Deploy get-all-categories
+  deploy-getall:
+    needs: build-and-push-getall
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GetAllCategories QA
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DNS_GETALLCATEGORIES_QA }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            sudo docker stop get-all-categories || true
+            sudo docker rm get-all-categories || true
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/get-all-categories:latest
+            sudo docker run -d --name get-all-categories --network host \
+              -e MONGO_URI="${{ secrets.MONGO_URI }}" \
+              ${{ secrets.DOCKERHUB_USERNAME }}/get-all-categories:latest
+
+  # 🚀 Deploy get-byid-category
+  deploy-getbyid:
+    needs: build-and-push-getbyid
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GetByIdCategory QA
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DNS_GETBYIDCATEGORY_QA }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            sudo docker stop get-byid-category || true
+            sudo docker rm get-byid-category || true
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/get-byid-category:latest
+            sudo docker run -d --name get-byid-category --network host \
+              -e MONGO_URI="${{ secrets.MONGO_URI }}" \
+              ${{ secrets.DOCKERHUB_USERNAME }}/get-byid-category:latest
+
+  # 🚀 Deploy graphql-gateway
   deploy-graphql:
     needs: build-and-push-graphql
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy GraphQL Gateway
+      - name: Deploy to GraphQL QA
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST_DNS_GRAPHQL_QA }}
@@ -144,11 +187,12 @@ jobs:
               -e CATEGORY_SERVICE_URL="http://${{ secrets.HOST_DNS_GETBYIDCATEGORY_QA }}/category" \
               ${{ secrets.DOCKERHUB_USERNAME }}/graphql-gateway:latest
 
-  deploy-create-product:
-    needs: build-and-push-create-product
+  # 🚀 Deploy create-product
+  deploy-createproduct:
+    needs: build-and-push-createproduct
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy Create Product QA
+      - name: Deploy to CreateProduct QA
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST_DNS_CREATEPRODUCT_QA }}
