--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: CI/CD Pipeline for Microservices
 on:
   push:
     branches:
-      - Feature_CategoryDomain_GetAllCategories
+      - Feature_BackEnd_CategoryDomain_AddMicroservice_DeleteCategory
 
 jobs:
   # 🛠 Build and Push create-category
@@ -12,13 +12,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
       - name: Build and push create-category
         uses: docker/build-push-action@v4
         with:
@@ -27,47 +25,62 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/create-category:latest
 
-  # 🛠 Build and Push get-all-categories
-  build-and-push-getall:
+  # 🛠 Build and Push update-category
+  build-and-push-update:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      - name: Build and push get-all-categories
+      - name: Build and push update-category
         uses: docker/build-push-action@v4
         with:
-          context: ./BackEnd/Domains/Categories/GetAllCategories
-          file: ./BackEnd/Domains/Categories/GetAllCategories/Dockerfile
+          context: ./BackEnd/Domains/Categories/UpdateCategory
+          file: ./BackEnd/Domains/Categories/UpdateCategory/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/get-all-categories:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/update-category:latest
 
-  # 🛠 Build and Push get-byid-category
-  build-and-push-getbyid:
+  # 🛠 Build and Push delete-category
+  build-and-push-delete:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      - name: Build and push get-byid-category
+      - name: Build and push delete-category
         uses: docker/build-push-action@v4
         with:
-          context: ./BackEnd/Domains/Categories/GetCategoryById
-          file: ./BackEnd/Domains/Categories/GetCategoryById/Dockerfile
+          context: ./BackEnd/Domains/Categories/DeleteCategory
+          file: ./BackEnd/Domains/Categories/DeleteCategory/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/get-byid-category:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/delete-category:latest
+
+  # 🛠 Build and Push get-products-by-category
+  build-and-push-get-products:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Build and push get-products-by-category
+        uses: docker/build-push-action@v4
+        with:
+          context: ./BackEnd/Domains/Products/GetProductsByCategory
+          file: ./BackEnd/Domains/Products/GetProductsByCategory/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/get-products-by-category:latest
 
   # 🛠 Build and Push graphql-gateway
   build-and-push-graphql:
@@ -75,102 +88,61 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
       - name: Build and push graphql-gateway
         uses: docker/build-push-action@v4
         with:
           context: ./BackEnd/Domains/GraphQL-Gateway
-          file: ./BackEnd//Domains/GraphQL-Gateway/Dockerfile
+          file: ./BackEnd/Domains/GraphQL-Gateway/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/graphql-gateway:latest
 
-  # 🛠 Build and Push create-product
-  build-and-push-createproduct:
+  # 🚀 Deploy delete-category (Depende de GraphQL y GetProductsByCategory)
+  deploy-delete-category:
+    needs: [build-and-push-delete, deploy-graphql, deploy-get-products]
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      - name: Build and push create-product
-        uses: docker/build-push-action@v4
-        with:
-          context: ./BackEnd/Domains/Products/CreateProduct
-          file: ./BackEnd/Domains/Products/CreateProduct/Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/create-product:latest
-
-  # 🚀 Deploy create-category
-  deploy-create:
-    needs: build-and-push-create
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to CreateCategory QA
+      - name: Deploy to DeleteCategory QA
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.HOST_DNS_CREATECATEGORY_QA }}
+          host: ${{ secrets.HOST_DNS_DELETECATEGORY_QA }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            sudo docker stop create-category || true
-            sudo docker rm create-category || true
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/create-category:latest
-            sudo docker run -d --name create-category --network host \
+            sudo docker stop delete-category || true
+            sudo docker rm delete-category || true
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/delete-category:latest
+            sudo docker run -d --name delete-category --network host \
               -e MONGO_URI="${{ secrets.MONGO_URI }}" \
-              ${{ secrets.DOCKERHUB_USERNAME }}/create-category:latest
+              -e GRAPHQL_SERVICE_URL="http://${{ secrets.HOST_DNS_GRAPHQL_QA }}/graphql" \
+              ${{ secrets.DOCKERHUB_USERNAME }}/delete-category:latest
 
-  # 🚀 Deploy get-all-categories
-  deploy-getall:
-    needs: build-and-push-getall
+  # 🚀 Deploy get-products-by-category
+  deploy-get-products:
+    needs: build-and-push-get-products
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to GetAllCategories QA
+      - name: Deploy to GetProductsByCategory QA
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.HOST_DNS_GETALLCATEGORIES_QA }}
+          host: ${{ secrets.HOST_DNS_GETPRODUCTSBYCATEGORY_QA }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            sudo docker stop get-all-categories || true
-            sudo docker rm get-all-categories || true
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/get-all-categories:latest
-            sudo docker run -d --name get-all-categories --network host \
-              -e MONGO_URI="${{ secrets.MONGO_URI }}" \
-              ${{ secrets.DOCKERHUB_USERNAME }}/get-all-categories:latest
+            sudo docker stop get-products-by-category || true
+            sudo docker rm get-products-by-category || true
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/get-products-by-category:latest
+            sudo docker run -d --name get-products-by-category --network host \
+              -e MONGO_URI="${{ secrets.MONGO_URI_PRODUCT }}" \
+              ${{ secrets.DOCKERHUB_USERNAME }}/get-products-by-category:latest
 
-  # 🚀 Deploy get-byid-category
-  deploy-getbyid:
-    needs: build-and-push-getbyid
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GetByIdCategory QA
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST_DNS_GETBYIDCATEGORY_QA }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            sudo docker stop get-byid-category || true
-            sudo docker rm get-byid-category || true
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/get-byid-category:latest
-            sudo docker run -d --name get-byid-category --network host \
-              -e MONGO_URI="${{ secrets.MONGO_URI }}" \
-              ${{ secrets.DOCKERHUB_USERNAME }}/get-byid-category:latest
-
-  # 🚀 Deploy graphql-gateway
+  # 🚀 Deploy graphql-gateway (Depende de GetProductsByCategory)
   deploy-graphql:
-    needs: build-and-push-graphql
+    needs: [build-and-push-graphql, deploy-get-products]
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to GraphQL QA
@@ -185,24 +157,5 @@ jobs:
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/graphql-gateway:latest
             sudo docker run -d --name graphql-gateway --network host \
               -e CATEGORY_SERVICE_URL="http://${{ secrets.HOST_DNS_GETBYIDCATEGORY_QA }}/category" \
+              -e PRODUCT_SERVICE_URL="http://${{ secrets.HOST_DNS_GETPRODUCTSBYCATEGORY_QA }}/products/by-category" \
               ${{ secrets.DOCKERHUB_USERNAME }}/graphql-gateway:latest
-
-  # 🚀 Deploy create-product
-  deploy-createproduct:
-    needs: build-and-push-createproduct
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to CreateProduct QA
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST_DNS_CREATEPRODUCT_QA }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            sudo docker stop create-product || true
-            sudo docker rm create-product || true
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/create-product:latest
-            sudo docker run -d --name create-product --network host \
-              -e MONGO_URI="${{ secrets.MONGO_URI_PRODUCT }}" \
-              -e GRAPHQL_URL="http://${{ secrets.HOST_DNS_GRAPHQL_QA }}/graphql" \
-              ${{ secrets.DOCKERHUB_USERNAME }}/create-product:latest
