--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - Feature_BackEnd_CategoryDomain_AddMicroservice_DeleteCategory
+      - Feature_CategoryDomain_GetAllCategories
 
 jobs:
   # 🛠 Build and Push create-category
@@ -82,6 +83,44 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/get-products-by-category:latest
 
+  # 🛠 Build and Push create-product
+  build-and-push-createproduct:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Build and push create-product
+        uses: docker/build-push-action@v4
+        with:
+          context: ./BackEnd/Domains/Products/CreateProduct
+          file: ./BackEnd/Domains/Products/CreateProduct/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/create-product:latest
+
+  # 🛠 Build and Push get-all-categories
+  build-and-push-getall:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Build and push get-all-categories
+        uses: docker/build-push-action@v4
+        with:
+          context: ./BackEnd/Domains/Categories/GetAllCategories
+          file: ./BackEnd/Domains/Categories/GetAllCategories/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/get-all-categories:latest
+
   # 🛠 Build and Push graphql-gateway
   build-and-push-graphql:
     runs-on: ubuntu-latest
@@ -101,61 +140,34 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/graphql-gateway:latest
 
-  # 🚀 Deploy delete-category (Depende de GraphQL y GetProductsByCategory)
-  deploy-delete-category:
-    needs: [build-and-push-delete, deploy-graphql, deploy-get-products]
+  # 🚀 Deploy todos los microservicios
+  deploy:
+    needs:
+      - build-and-push-create
+      - build-and-push-update
+      - build-and-push-delete
+      - build-and-push-get-products
+      - build-and-push-createproduct
+      - build-and-push-getall
+      - build-and-push-graphql
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to DeleteCategory QA
+      - name: Deploy to QA Environment
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.HOST_DNS_DELETECATEGORY_QA }}
+          host: ${{ secrets.HOST_DNS_QA }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            sudo docker stop delete-category || true
-            sudo docker rm delete-category || true
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/delete-category:latest
-            sudo docker run -d --name delete-category --network host \
-              -e MONGO_URI="${{ secrets.MONGO_URI }}" \
-              -e GRAPHQL_SERVICE_URL="http://${{ secrets.HOST_DNS_GRAPHQL_QA }}/graphql" \
-              ${{ secrets.DOCKERHUB_USERNAME }}/delete-category:latest
-
-  # 🚀 Deploy get-products-by-category
-  deploy-get-products:
-    needs: build-and-push-get-products
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GetProductsByCategory QA
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST_DNS_GETPRODUCTSBYCATEGORY_QA }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            sudo docker stop get-products-by-category || true
-            sudo docker rm get-products-by-category || true
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/get-products-by-category:latest
-            sudo docker run -d --name get-products-by-category --network host \
-              -e MONGO_URI="${{ secrets.MONGO_URI_PRODUCT }}" \
-              ${{ secrets.DOCKERHUB_USERNAME }}/get-products-by-category:latest
-
-  # 🚀 Deploy graphql-gateway (Depende de GetProductsByCategory)
-  deploy-graphql:
-    needs: [build-and-push-graphql, deploy-get-products]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GraphQL QA
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST_DNS_GRAPHQL_QA }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            sudo docker stop graphql-gateway || true
-            sudo docker rm graphql-gateway || true
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/graphql-gateway:latest
-            sudo docker run -d --name graphql-gateway --network host \
-              -e CATEGORY_SERVICE_URL="http://${{ secrets.HOST_DNS_GETBYIDCATEGORY_QA }}/category" \
-              -e PRODUCT_SERVICE_URL="http://${{ secrets.HOST_DNS_GETPRODUCTSBYCATEGORY_QA }}/products/by-category" \
-              ${{ secrets.DOCKERHUB_USERNAME }}/graphql-gateway:latest
+            SERVICES=("create-category" "update-category" "delete-category" "get-products-by-category" "create-product" "get-all-categories" "graphql-gateway")
+            
+            for SERVICE in "${SERVICES[@]}"; do
+              echo "Deploying $SERVICE..."
+              sudo docker stop $SERVICE || true
+              sudo docker rm $SERVICE || true
+              sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/$SERVICE:latest
+              sudo docker run -d --name $SERVICE --network host \
+                -e MONGO_URI="${{ secrets.MONGO_URI }}" \
+                -e GRAPHQL_SERVICE_URL="http://${{ secrets.HOST_DNS_GRAPHQL_QA }}/graphql" \
+                ${{ secrets.DOCKERHUB_USERNAME }}/$SERVICE:latest
+            done
