--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,11 +3,13 @@ name: CI/CD Pipeline for Microservices
 on:
   push:
     branches:
-      - Feature_BackEnd_CategoryDomain_AddMicroservice_DeleteCategory
       - Feature_CategoryDomain_GetAllCategories
 
 jobs:
-  # 🛠 Build and Push create-category
+
+  # CATEGORIES
+
+  # Build and Push create-category
   build-and-push-create:
     runs-on: ubuntu-latest
     steps:
@@ -26,7 +28,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/create-category:latest
 
-  # 🛠 Build and Push update-category
+  # Build and Push update-category
   build-and-push-update:
     runs-on: ubuntu-latest
     steps:
@@ -45,7 +47,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/update-category:latest
 
-  # 🛠 Build and Push delete-category
+  # Build and Push delete-category
   build-and-push-delete:
     runs-on: ubuntu-latest
     steps:
@@ -63,8 +65,50 @@ jobs:
           file: ./BackEnd/Domains/Categories/DeleteCategory/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/delete-category:latest
+  
+  # Build and Push get-all-categories
+  build-and-push-getall:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Build and push get-all-categories
+        uses: docker/build-push-action@v4
+        with:
+          context: ./BackEnd/Domains/Categories/GetAllCategories
+          file: ./BackEnd/Domains/Categories/GetAllCategories/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/get-all-categories:latest
+  
+  # Build and Push get-byid-category
+  build-and-push-getbyid:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-  # 🛠 Build and Push get-products-by-category
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build and push get-byid-category
+        uses: docker/build-push-action@v4
+        with:
+          context: ./BackEnd/Domains/Categories/GetCategoryById
+          file: ./BackEnd/Domains/Categories/GetCategoryById/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/get-byid-category:latest
+  
+  #=======================================================================================  
+  # PRODUCTS
+  # Build and Push get-products-by-category
   build-and-push-get-products:
     runs-on: ubuntu-latest
     steps:
@@ -83,7 +127,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/get-products-by-category:latest
 
-  # 🛠 Build and Push create-product
+  # Build and Push create-product
   build-and-push-createproduct:
     runs-on: ubuntu-latest
     steps:
@@ -102,26 +146,10 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/create-product:latest
 
-  # 🛠 Build and Push get-all-categories
-  build-and-push-getall:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - name: Build and push get-all-categories
-        uses: docker/build-push-action@v4
-        with:
-          context: ./BackEnd/Domains/Categories/GetAllCategories
-          file: ./BackEnd/Domains/Categories/GetAllCategories/Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/get-all-categories:latest
+  #=======================================================================================
+  # GRAPHQL
 
-  # 🛠 Build and Push graphql-gateway
+  # Build and Push graphql-gateway
   build-and-push-graphql:
     runs-on: ubuntu-latest
     steps:
@@ -140,34 +168,176 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/graphql-gateway:latest
 
-  # 🚀 Deploy todos los microservicios
-  deploy:
-    needs:
-      - build-and-push-create
-      - build-and-push-update
-      - build-and-push-delete
-      - build-and-push-get-products
-      - build-and-push-createproduct
-      - build-and-push-getall
-      - build-and-push-graphql
+
+#=========================================================================
+#DEPLOY
+#=========================================================================
+
+#CATEGORIES
+  # Deploy delete-category (Depende de GraphQL y GetProductsByCategory)
+  deploy-delete-category:
+    needs: [build-and-push-delete, deploy-graphql, deploy-get-products]
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to QA Environment
+      - name: Deploy to DeleteCategory QA
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.HOST_DNS_QA }}
+          host: ${{ secrets.HOST_DNS_DELETECATEGORY_QA }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            SERVICES=("create-category" "update-category" "delete-category" "get-products-by-category" "create-product" "get-all-categories" "graphql-gateway")
-            
-            for SERVICE in "${SERVICES[@]}"; do
-              echo "Deploying $SERVICE..."
-              sudo docker stop $SERVICE || true
-              sudo docker rm $SERVICE || true
-              sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/$SERVICE:latest
-              sudo docker run -d --name $SERVICE --network host \
-                -e MONGO_URI="${{ secrets.MONGO_URI }}" \
-                -e GRAPHQL_SERVICE_URL="http://${{ secrets.HOST_DNS_GRAPHQL_QA }}/graphql" \
-                ${{ secrets.DOCKERHUB_USERNAME }}/$SERVICE:latest
-            done
+            sudo docker stop delete-category || true
+            sudo docker rm delete-category || true
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/delete-category:latest
+            sudo docker run -d --name delete-category --network host \
+              -e MONGO_URI="${{ secrets.MONGO_URI }}" \
+              -e GRAPHQL_SERVICE_URL="http://${{ secrets.HOST_DNS_GRAPHQL_QA }}/graphql" \
+              ${{ secrets.DOCKERHUB_USERNAME }}/delete-category:latest
+
+  # Deploy create-category
+  deploy-create:
+    needs: build-and-push-create
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to CreateCategory QA
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DNS_CREATECATEGORY_QA }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            sudo docker stop create-category || true
+            sudo docker rm create-category || true
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/create-category:latest
+            sudo docker run -d --name create-category --network host \
+              -e MONGO_URI="${{ secrets.MONGO_URI }}" \
+              ${{ secrets.DOCKERHUB_USERNAME }}/create-category:latest
+
+  # Deploy get-all-categories
+  deploy-getall:
+    needs: build-and-push-getall
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GetAllCategories QA
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DNS_GETALLCATEGORIES_QA }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            sudo docker stop get-all-categories || true
+            sudo docker rm get-all-categories || true
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/get-all-categories:latest
+            sudo docker run -d --name get-all-categories --network host \
+              -e MONGO_URI="${{ secrets.MONGO_URI }}" \
+              ${{ secrets.DOCKERHUB_USERNAME }}/get-all-categories:latest
+
+  # Deploy get-byid-category
+  deploy-getbyid:
+    needs: build-and-push-getbyid
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GetByIdCategory QA
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DNS_GETBYIDCATEGORY_QA }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            sudo docker stop get-byid-category || true
+            sudo docker rm get-byid-category || true
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/get-byid-category:latest
+            sudo docker run -d --name get-byid-category --network host \
+              -e MONGO_URI="${{ secrets.MONGO_URI }}" \
+              ${{ secrets.DOCKERHUB_USERNAME }}/get-byid-category:latest
+  
+  # Deploy update-category 
+  deploy-update-category:
+    needs: build-and-push-update
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to UpdateCategory QA
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DNS_UPDATECATEGORY_QA  }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            sudo docker stop update-category || true
+            sudo docker rm update-category || true
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/update-category:latest
+            sudo docker run -d --name update-category --network host \
+              -e MONGO_URI="${{ secrets.MONGO_URI }}" \
+              ${{ secrets.DOCKERHUB_USERNAME }}/update-category:latest
+  
+#=========================================================================
+#PRODUCTS
+  # Deploy get-products-by-category
+  deploy-get-products:
+    needs: build-and-push-get-products
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GetProductsByCategory QA
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DNS_GETPRODUCTSBYCATEGORY_QA }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            sudo docker stop get-products-by-category || true
+            sudo docker rm get-products-by-category || true
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/get-products-by-category:latest
+            sudo docker run -d --name get-products-by-category --network host \
+              -e MONGO_URI="${{ secrets.MONGO_URI_PRODUCT }}" \
+              ${{ secrets.DOCKERHUB_USERNAME }}/get-products-by-category:latest
+  
+  # Deploy create-product
+  deploy-createproduct:
+    needs: build-and-push-createproduct
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to CreateProduct QA
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DNS_CREATEPRODUCT_QA }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            sudo docker stop create-product || true
+            sudo docker rm create-product || true
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/create-product:latest
+            sudo docker run -d --name create-product --network host \
+              -e MONGO_URI="${{ secrets.MONGO_URI_PRODUCT }}" \
+              -e GRAPHQL_URL="http://${{ secrets.HOST_DNS_GRAPHQL_QA }}/graphql" \
+              ${{ secrets.DOCKERHUB_USERNAME }}/create-product:latest
+
+
+#=========================================================================
+#GRAPHQL
+  # Deploy graphql-gateway (Depende de GetProductsByCategory)
+  deploy-graphql:
+    needs: [build-and-push-graphql, deploy-get-products, deploy-getbyid]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GraphQL QA
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DNS_GRAPHQL_QA }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            sudo docker stop graphql-gateway || true
+            sudo docker rm graphql-gateway || true
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/graphql-gateway:latest
+            sudo docker run -d --name graphql-gateway --network host \
+              -e CATEGORY_SERVICE_URL="http://${{ secrets.HOST_DNS_GETBYIDCATEGORY_QA }}/category" \
+              -e PRODUCT_SERVICE_URL="http://${{ secrets.HOST_DNS_GETPRODUCTSBYCATEGORY_QA }}/products/by-category" \
+              ${{ secrets.DOCKERHUB_USERNAME }}/graphql-gateway:latest
+
+  
+
+  
+
+  
+
+  
